# authenticame

./: .gitignore  CHANGELOG  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: clippy.yml  docker-image.yml  rust.yml
docker/: Dockerfile  docker-compose.yml
src/: main.rs
src/api/: mod.rs
src/api/login/: mod.rs  post.rs
src/api/oauth/: mod.rs
src/db/config/: migration.sql
