[package]
name = "authenticame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
console = ["console-subscriber"]

[build]
rustflags = ["--cfg", "tokio_unstable"]

[dependencies]
axum = "0.5.16"
cfg-if = "1.0.0"
console-subscriber = { version = "0.1.8", optional = true }
env_logger = "0.9.1"
envconfig = "0.10.0"
serde = { version = "1.0.145", features = ["derive", "serde_derive"] }
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json", "tracing", "tracing-serde"] }
